src/components/XHRUploader/XHRUploader.scss
@import './mixins';
@import './variables';

$uploader-border-color:   #e0e2e9;
$droptarget-border-color: #f0f1f5;
$uploader-text-color: #d3d3d3;
$droptarget-active-border-color: #e3e3e3;
$progressbar-bg-color: #e8e6e7;

.xhrUploader {
  border: 1px solid $uploader-border-color;
  background-color: white;
  color: $uploader-text-color;
  @include border-radius(4px);
  padding: 5px;
}

.dropTarget {
  border: 3px dashed $droptarget-border-color;
  @include border-radius(4px);
  padding: 20px 0;
  cursor: pointer;
  &.active {
    border-color: $droptarget-active-border-color;
    color: $dashboard-text-color;
  }
}
.placeHolder {
  padding-left: 10%;
  padding-right: 10%;
  text-align: center;
  font-size: 14px;
}

.fileset {
  padding: 10px;
}

.fileTopSection {
  @include clearfix;
}
.fileDetails {
  font-size: 12px;
}

.fileIcon {
  padding-right: 10px;
}

.fileName {
  margin-right: 10px;
  color: $dashboard-text-color;
}

.removeButton {
  float: right;
  color: $dashboard-text-color;
  line-height: 1;
  &:hover, &:active {
    color: darken($dashboard-text-color, 10%);
  }
}

.fileSize {
}

.progressBar {
  margin-top: 10px;
  width: 100%;
  height: 6px;
  background-color: $progressbar-bg-color;
  @include border-radius(2px);
  overflow: hidden;
  position: relative;
}

.progress {
  @include full-size;
  @include border-radius(2px);
  background-color: $dashboard-text-color;
}

.fileBottomSection {
  font-size: 12px;
  margin-top: 10px;
  text-align: center;
}

.progressValue,
.timeLeft {
  font-weight: 600;
  color: $dashboard-text-color;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.spin {
  animation: spin 2s infinite linear;
  display: inline-block;
  line-height: 1;
}

